fix: header responsive and add links

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2885,7 +2885,7 @@
           "settings": {
             "heading": {
               "label": "Heading",
-              "default": "Talk about your brand"
+              "default": "About US"
             }
           }
         },
